<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/payment_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipient_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/recipient_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/iban_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_spacing"
            android:layout_marginEnd="@dimen/input_spacing"
            app:layout_constraintEnd_toStartOf="@id/amount_layout"
            app:layout_constraintHorizontal_weight=".7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipient_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iban"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/iban_hint"
                android:nextFocusDown="@id/amount" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight=".3"
            app:layout_constraintStart_toEndOf="@id/iban_layout"
            app:layout_constraintTop_toBottomOf="@id/recipient_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/amount_hint"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="€"
            app:layout_constraintEnd_toEndOf="@id/amount_layout"
            app:layout_constraintTop_toTopOf="@id/amount_layout"
            tools:ignore="HardcodedText" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/iban_amount_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="iban_layout,amount_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/purpose_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iban_amount_barrier">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/purpose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/purpose_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/return_to_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_business"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/purpose_layout" />

        <Button
            android:id="@+id/resolve_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resolve_payment"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/purpose_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>